# TOSS-Assigment

./: .dockerignore  API_SPLIT_GUIDE.md  Cargo.toml  Cross.toml  DOCKER_DEPLOYMENT.md  Dockerfile  MAP_API_GUIDE.md  README.md  config.json  docker-compose.yml  example_request.json  food_results.json  map_api_example.json  smart_food_analysis.json
src/: main.rs
