[package]
name = "my_crate_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.1"
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"
env_logger = "0.10"
actix-web-lab = "0.20"
futures = "0.3"
